<resources>
<<<<<<< HEAD
    <string name="app_name">ToDoList</string>

    <!-- string for todolist Activity-->
    <string name="todolist_menu_sort">Sort by</string>
    <string name="todolist_menu_display">Display</string>
    <string name="todolist_menu_preference">Settings</string>

    <string name="speech_prompt">What can I do for you?</string>
    <string name="speech_not_supported">Sorry, speech recognition is not supported.</string>

    <string name="todolist_ben_selecttime_text">Pick Time</string>
    <string name="todolist_ben_selectdate_text">Pick Date</string>
    <string name="todolistitem_title">Title</string>
    <string name="btn_confirm_detaildialog">Add</string>
    <string name="delete_confirmation">Are you sure to delete this todo item: </string>
    <string name="btn_clear_detaildialog">Clear</string>
    <string name="todolistitem_description">Description</string>
    <string name="todolist_confirm_text">Confirm</string>
    <string name="todolist_clear_text">Clear</string>
    <string name="todolist_cancel_text">Cancel</string>
    <string name="todoiteminput_edittext_activitytodolist_text">Quick todo item</string>
    <string name="clear_confirmation_dialog_text">Are you sure to clear all fields?</string>
    <string name="display_completed_todoitems">Display Completed ToDoItems</string>
    <string name="display_incompleted_todoitems">Display Incompleted ToDoItems</string>
    <string name="display_notstarted_todoitems">Display Not Started ToDoItems</string>
    <string name="do_you_want_to">Do you want to: </string>
    <string name="please_select_what_to_be_displayed">"Please select what to be displayed: " </string>
    <string name="please_select_a_sorting_standard">"Please select a sorting standard: " </string>
    <string name="completed">"Completed" </string>

    <!-- Menu dialog box radio button text-->
    <string name="sort_menu_radiobutton_sortbydeadline">Sort by Deadline</string>
    <string name="sort_menu_radiobutton_sortbypriority">Sort by Priority</string>
    <string name="sort_menu_radiobutton_sortbytitle">Sort by Title</string>
    <string name="sort_menu_radiobutton_sortbydateandtimecreated">Sort by Time Added</string>
    <string name="sort_menu_radiobutton_displayincompleteditems">Display Incompleted Items</string>
    <string name="sort_menu_radiobutton_displaynotstarteditems">Display Not Started Items</string>
    <string name="sort_menu_radiobutton_displaycompleteditems">Display Completed Items</string>

    <!-- Menu in ToDoItemDetailsActivity-->
    <string name="todolist_share">Share</string>

    <string-array name="priority_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="menu_sort_standard">
        <item>Priority</item>
        <item>Deadline</item>
        <item>Time Added</item>
        <item>Title</item>
    </string-array>

    <string-array name="menu_display_standard">
        <item>Incomplete</item>
        <item>Complete</item>
        <item>Simple To Do Items</item>
        <item>All</item>
    </string-array>

    <string-array name="incomplete_todoitem_operation">
        <item>Mark as completed</item>
        <item>Delete</item>
    </string-array>

    <string-array name="complete_todoitem_operation">
        <item>Mark as incomplete</item>
        <item>Delete</item>
    </string-array>

    <string-array name="simple_todoitem_operation">
        <item>Mark as completed</item>
        <item>Delete</item>
    </string-array>
=======
    <string name="app_name">Servant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
<<<<<<< HEAD
    <string name="login_button_title">Login</string>
    <string name="signUP_button_title">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
=======
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_show_detail">ShowDetail</string>
    <string name="CONSUMER_KEY">p4DR2uIX0qDwaqvO5epWPw</string>
    <string name="CONSUMER_SECRET">-5hi0yTaCWsI8adDLaYCEAi_pSU</string>
    <string name="TOKEN">gkLpGKh3K5u-Kk-niVj9AomlqEx6Lbtg</string>
    <string name="TOKEN_SECRET">Qw6_mCKTLr1M5lzJq7r8E1bJBfA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> habit
>>>>>>> master
</resources>
